# FIAP-9SOAT-Challenge-4-app-purchase

./: .gitignore  README.md  TODO.md  app.py  builder.py  docker-compose.dev.yml  docker-compose.prd.yml  pyproject.toml  sonar-project.properties
.github/workflows/: dev.yml
docker/: app.Dockerfile  dev_db.Dockerfile
documentation/: .$infraestrutura.drawio.bkp  arquiteturas simplificadas.drawio  infra cloud.drawio  infraestrutura.drawio
infra/: api_gateway.tf  api_integrations.tf  data.tf  sg.tf  terraform.tf  variable.tf
k8s/: app-deployment.yaml  app-service.yaml  configmap.yaml  hpa.yaml  postgre-deployment.yaml  postgre-service.yaml  secret-template.yaml
migration/builder/: raw_creation.py
migration/seeder/: seeder.py
src/adapters/data_mappers/: categoria_entity_data_mapper.py  cliente_aggregate_data_mapper.py  cliente_entity_data_mapper.py  compra_data_mapper.py  currency_entity_data_mapper.py  meio_de_pagamento_data_mapper.py  pagamento_aggregate_data_mapper.py  pagamento_data_mapper.py  payment_metadata_data_mapper.py  pedido_aggregate_data_mapper.py  produto_aggregate_data_mapper.py  produto_entity_data_mapper.py  produto_escolhido_entity_data_mapper.py  usuario_data_mapper.py
src/adapters/driven/composites/: composite_pedido_repository.py
src/adapters/driven/infra/: __init__.py
src/adapters/driver/API/: cliente_router.py  maintenance_router.py  payment_router.py  pedido_router.py  produto_router.py  queue_router.py  (+1 more)
tests/bdd/: test_conclude_purchase.feature  test_conclude_purchase.py
tests/test_resources/: mock_worker.py
(+110 files in other folders)
