[tool.poetry]
name = "fiap-9soat-challenge-1"
version = "0.2.0"
description = ""
authors = ["Lucas Maion <lucasmgois@outlook.com>"]
license = "MIT"
readme = "README.md"
# package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.10"
psycopg2 = "^2.9.10"
fastapi = {extras = ["standard"], version = "^0.115.2"}
peewee = "^3.17.6"
pydantic = "^2.9.2"
loguru = "^0.7.2"
schedule = "^1.2.2"
requests = "^2.32.3"
pytest-bdd = "^8.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
faker = "^30.8.1"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]